# GitlabMCP

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: gitlab-mcp.service  install-service.sh
src/gitlab_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  errors.py  main.py  models.py  server.py
src/gitlab_mcp/tools/: __init__.py  issues.py  merge_requests.py  pipelines.py  projects.py  repository.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_issues.py  test_merge_requests.py  test_pipelines.py  test_projects.py  test_repository.py  test_server.py
