[project]
name = "gitlab-mcp"
version = "0.1.0"
description = "MCP server for GitLab REST API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "httpx>=0.28,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "click>=8.0",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "mypy>=1.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
